# simple_gdrive

./: README.md  pyproject.toml
.github/workflows/: ci.yml
simple_gdrive/: __main__.py  auth.py  cli.py  config.py  fs.py
tests/: test_import.py
